# vector_expr

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
crates/vector-expr/: Cargo.toml
crates/vector-expr-f64/: Cargo.toml
src/: evaluate.rs  expression.rs  grammar.pest  lib.rs  parse.rs
