[package]
name = "vector-expr"
authors = ["Duncan Fairbanks <duncan.fairbanks@foresightmining.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/vector_expr"
publish = ["foresight-mining-software-corporation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
pest = "2"
pest_derive = "2"

rayon = { version = "1", optional = true }
