[workspace]
members = ["crates/vector-expr", "crates/vector-expr-f64"]
resolver = "2"

[patch.crates-io]
vector-expr = { path = "crates/vector-expr" }
vector-expr-f64 = { path = "crates/vector-expr-f64" }

[workspace.dependencies]
once_cell = "1.19.0"
pest = "2.7.5"
pest_derive = "2.7.5"
rayon = "1"
